--- a/force-app/main/default/classes/GetContactsAddresses.cls
+++ b/force-app/main/default/classes/GetContactsAddresses.cls
@@ -2,7 +2,7 @@ public with sharing class GetContactsAddresses {
 
     @AuraEnabled
     public static List<Contact> getContactsForCity(String city) 
-        return [Select Id, Name, Email, MailingLatitude, MailingLongitude, MailingStreet, MailingCity, MailingState,  MailingCountry, MailingPostalCode from Contact Where Contact = :city] 
+        return [Select Id, Name, Email, MailingLatitude, MailingLongitude, MailingStreet, MailingCity, MailingState,  MailingCountry, MailingPostalCode from Contact Where Contact == :city]; 
     }
 
 }
