--- a/force-app/main/default/classes/GetContactsAddresses.cls
+++ b/force-app/main/default/classes/GetContactsAddresses.cls
@@ -1,8 +1,8 @@
 public with sharing class GetContactsAddresses {
 
-    @AuraEnabled
-    public static List<Contact> getContactsForCity(String city) 
-        return [Select Id, Name, Email, MailingLatitude, MailingLongitude, MailingStreet, MailingCity, MailingState,  MailingCountry, MailingPostalCode from Contact Where Contact == :city]; 
+    @AuraEnabled(cacheable=true)
+    public static List<Contact> getContactsForCity(String city) {
+        return [Select Id, Name, Email, MailingLatitude, MailingLongitude, MailingStreet, MailingCity, MailingState,  MailingCountry, MailingPostalCode from Contact Where MailingCity = :city]; 
     }
 
 }
