all working. Multiple origins would be awesome...

--- a/force-app/main/default/classes/GetContactsAddresses.cls
+++ b/force-app/main/default/classes/GetContactsAddresses.cls
@@ -2,6 +2,6 @@ public with sharing class GetContactsAddresses {
 
     @AuraEnabled(cacheable=true)
     public static List<Contact> getContactsForCity(String city) {
-        return [Select Id, Name, Email, MailingLatitude, MailingLongitude, MailingStreet, MailingCity, MailingState,  MailingCountry, MailingPostalCode from Contact Where MailingCity = :city]; 
+        return [Select Id, Name, Droneport__c, Email, MailingLatitude, MailingLongitude, MailingStreet, MailingCity, MailingState,  MailingCountry, MailingPostalCode from Contact Where MailingCity = :city]; 
     }
 }
